# avfx

./: .gitignore  README.md
music_analyzer/: README.md  pyproject.toml
music_analyzer/music_analyzer/: __main__.py  util.py
spectral_analyzer/: README.md  config.toml.example  pyproject.toml
spectral_analyzer/spectral_analyzer/: __main__.py  numpy_sprite.py  teensy_reciever.py
spectral_analyzer/spectral_analyzer/frame_generation/: __init__.py  gradient.py
